--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "v1",
     "clsx": "^2.1.1",
+    "jest": "^29.7.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
